# rustymachine-regression

./: Cargo.toml
src/: lin_reg.rs  main.rs
