[package]
name = "rustymachine-regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
rand = "0.8.5"
rusty-machine = "0.5.4"
serde = "1.0.147"
serde_derive = "1.0.147"
ml-utils = { path = "../ml-utils" }
